deps/v8/test/message/fail/modules-import2.out
*%(basename)s:7: SyntaxError: The requested module does not provide an export named 'a'
import {a as b} from "modules-import2.js";
        ^
SyntaxError: The requested module does not provide an export named 'a'

